# todoist-agent

./: .crursorrules  .env.test  Dockerfile  README.md  agents.md  main.py  pyproject.toml  pytest.ini  requirements.txt  setup.py  test.py
app/: __init__.py  __main__.py  aplication.py
app/agent/: agent.py  nodes.py  openai_service.py  prompts.py  tools.py
app/agent/schema/: __init__.py  response.py
app/api/: endpoints.py  models.py
app/core/: __init__.py  config.py  logging.py
app/tools/todoist/: tasks.py  test.py
tests/: conftest.py  test_api.py  test_todoist_tools.py
